assets/css/styles.css
body {
    background-image: url('/the-website/assets/imgs/background.png');
    background-repeat: repeat-y;
    min-height: 100vh;
    background-attachment: fixed;
    font-family: 'Roboto', sans-serif;
    color: #fff;
}

nav {
    z-index: 2;
    position: sticky;
    top: 0;
    width: 100%;
    background-color: #000;
    display: flex;
    /* align-items: center; */

    a {
        height: 100%;
        /* width: 20%; */
        padding-left: 2%;
        min-width: min-content;
        text-decoration: none;
        color: #fff;
        text-align: center;
        display: flex;
        font-weight: lighter;
    }
}

footer {
    background-color: #000;
    color: #fff;
    text-align: center;
    padding: 1rem;
    font-weight: lighter;
    /* width: 100%; */
    a {
        color: #fff;
        text-decoration: none;
        img {
            width: 1.5rem;
            height: 1.5rem;
        }
    }
}

h1 {
    text-align: center;
}

h2 {
    text-align: center;
    width: 100%;
}

.nav-text {
    margin: auto;
}

.home-banner {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-image: url('/the-website/assets/imgs/home_banner.png'); /* TODO: CHANGE LATER */
    background-size: cover;
    background-position: center;
    color: #fff;
    text-align: center;
    font-size: 7rem;
    font-weight: bolder;
}

.home-programs {
    margin: auto;
    text-decoration: none;
    display: inline-block;
    justify-content: center;
    align-items: center;
    width: 22vw;
    height: 22vw;
    line-height: 22vw;
    background-image: url('/the-website/assets/imgs/programs.png'); /* TODO: CHANGE LATER */
    background-size: cover;
    background-position: center;
    color: #fff;
    text-align: center;
    font-size: 3rem;
    font-weight: bolder;
}

.home-content {
    text-align: center;
    font-size: 1.3em;
    padding: 5%;
    margin: auto;
}

.home-faq {
    margin: auto;
    text-decoration: none;
    display: inline-block;
    justify-content: center;
    align-items: center;
    width: 22vw;
    height: 22vw;
    line-height: 22vw;
    background-image: url('/the-website/assets/imgs/faq.png'); /* TODO: CHANGE LATER */
    background-size: cover;
    background-position: center;
    color: #fff;
    text-align: center;
    font-size: 3rem;
    font-weight: bolder;
}

.home-varsity {
    margin: auto;
    text-decoration: none;
    display: inline-block;
    justify-content: center;
    align-items: center;
    width: 22vw;
    height: 22vw;
    line-height: 22vw;
    background-image: url('/the-website/assets/imgs/varsity.png'); /* TODO: CHANGE LATER */
    background-size: cover;
    background-position: center;
    color: #fff;
    text-align: center;
    font-size: 3rem;
    font-weight: bolder;
}

.content-with-margins {
    min-height: 89vh;
    a {
        color: #fff;
    }
    margin: 0% 10%;
    div {
        display: flex;
        align-items: center;
        img {
            width: 40%
        }
        p {
            display: inline-block;
            line-height: 1.5;
            vertical-align: middle;
            padding-left: 10%;
            width: 40%;
        }
    }
}

.line {
    width: 50%;
    display: inline-block;
    border: 1px solid #fff;
    align-items: left;
}

.img-box-holder {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
}

.img-box {
    width: 25% !important;
    display: inline-block;
    
    img {
        width: 100% !important;
        display: block;
    }
    figcaption {
        text-align: center;
    }

}

.random-extra-space {
    width: 50%;
}

.yellow-button {
    background-color: #ffd100;
    color: #000;
    border: 1px solid #aaa;
    padding: 0.5rem;
    text-decoration: none;
}

.yellow-button:hover {
    background-color: #79681a;
    color: #fff
}

.person-block {
    p {
        padding-right: 5%;
    }
    padding-bottom: 5%;
}

